Fix stats button cutoff on mobile; increase aside cutoff for smaller screens

--- a/release/css/style.css
+++ b/release/css/style.css
@@ -211,8 +211,8 @@ button.warning, .button.warning {
 
 .userfield>* {
     -webkit-box-flex: 1;
-        -ms-flex: 1 220px;
-            flex: 1 220px;
+        -ms-flex: 1 180px;
+            flex: 1 180px;
 }
 
 .subfield {
@@ -268,8 +268,8 @@ button.warning, .button.warning {
     
     .userfield>*{
         -webkit-box-flex: 1;
-            -ms-flex: 1 140px;
-                flex: 1 140px;
+            -ms-flex: 1 500px;
+                flex: 1 500px;
     }
     
     button, .button {
@@ -285,6 +285,10 @@ button.warning, .button.warning {
         -webkit-box-flex: 1!important;
             -ms-flex: 1 0px!important;
                 flex: 1 0px!important;
+    }
+    
+    input+input, button+button, .button+.button {
+        margin-left: 0!important;
     }
 }
 
@@ -764,7 +768,7 @@ body>div>* {
     background-color: #E6E6E6;
 }
 
-@media all and (max-width: 600px) {
+@media all and (max-width: 700px) {
     aside {
         display: none!important;
     }
